:memo: Fix sanction migration and click table